# ros2_jazzy_learning_journey

./: .ros2_bashrc
secondJazzyWorkspace/moveit_cpp/launch/: moveit_cpp_tutorial.launch.py
secondJazzyWorkspace/src/motion_planning_py/: CMakeLists.txt  package.xml
secondJazzyWorkspace/src/motion_planning_py/config/: motion_planning_python_api_tutorial.yaml  visual.rviz
secondJazzyWorkspace/src/motion_planning_py/launch/: moveitpy.launch.py  ur_control.launch.py
secondJazzyWorkspace/src/motion_planning_py/scripts/: motion_planning_python_api_planning_scene.py  motion_planning_python_api_tutorial.py
secondJazzyWorkspace/src/ur_model_and_state/: CMakeLists.txt  package.xml
secondJazzyWorkspace/src/ur_model_and_state/launch/: ur_model_and_state.launch.py
secondJazzyWorkspace/src/ur_model_and_state/src/: ur_model_and_state.cpp
secondJazzyWorkspace/src/ur_moveit_cpp/: CMakeLists.txt  package.xml
secondJazzyWorkspace/src/ur_moveit_cpp/config/: moveit_cpp_tutorial.rviz  visual.rviz
secondJazzyWorkspace/src/ur_moveit_cpp/launch/: urmoveitcpp.launch.py
secondJazzyWorkspace/src/ur_moveit_cpp/src/: moveit_cpp_tutorial.cpp  my_moveit_cpp.cpp
学习记录/: github链接ssh.md  学习记录.md  总结1：ros2正确连接ur机械臂.md
学习记录/问题记录/: launch文件的参数传入逻辑.md
